--- a/res/layout/list_layout.xml
+++ b/res/layout/list_layout.xml
@@ -6,7 +6,7 @@
 
     <!-- We have to indicate that the listview is now a PullAndLoadListView -->
 
-    <com.joffrey_bion.testpulltorefresh.widget.PullToRefreshListView
+    <com.jbion.android.pulltorefresh.widget.PullToRefreshListView
         android:id="@+id/android:list"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent" />
