--- a/res/layout/pull_footer.xml
+++ b/res/layout/pull_footer.xml
@@ -2,17 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/load_more_footer"
     android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:background="@color/black" >
-
-    <View
-        android:id="@+id/top_line"
-        android:layout_width="fill_parent"
-        android:layout_height="0.5dp"
-        android:layout_alignParentTop="true"
-        android:background="@color/dark_slate_gray"
-        android:visibility="visible" />
-
+    android:layout_height="wrap_content" >
  
     <ProgressBar
         android:id="@+id/load_more_progressBar"
