fixed bug: last updated showing up after animation

--- a/res/layout/ptr_header.xml
+++ b/res/layout/ptr_header.xml
@@ -51,7 +51,7 @@
             android:layout_gravity="center"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:textStyle="normal"
-            android:visibility="gone" />
+            android:visibility="visible" />
     </LinearLayout>
 
 </LinearLayout>
