--- a/res/layout/activity_swipe.xml
+++ b/res/layout/activity_swipe.xml
@@ -14,6 +14,7 @@
         swipe:swipeMode="left"
         swipe:swipeOffsetLeft="100dp"
         swipe:swipeOffsetRight="50dp"
-        swipe:swipeCloseAllItemsWhenMoveList="true" />
+        swipe:swipeCloseAllItemsWhenMoveList="true"
+        swipe:swipeMultipleSelectEnabled="false" />
 
 </RelativeLayout>
