--- a/res/values/swipelistview__attrs.xml
+++ b/res/values/swipelistview__attrs.xml
@@ -24,6 +24,7 @@
         <attr name="swipeOffsetLeft" format="dimension"/>
         <attr name="swipeOffsetRight" format="dimension"/>
         <attr name="swipeCloseAllItemsWhenMoveList" format="boolean"/>
+        <attr name="swipeMultipleSelectEnabled" format="boolean"/>
         <attr name="swipeFrontView" format="reference"/>
         <attr name="swipeBackView" format="reference"/>
         <attr name="swipeMode" format="enum">
