--- a/res/values/dimen.xml
+++ b/res/values/dimen.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="item_height">70dp</dimen>
+    <dimen name="item_height_3">210dp</dimen>
 </resources>
