--- a/res/layout/activity_swipe.xml
+++ b/res/layout/activity_swipe.xml
@@ -9,13 +9,13 @@
         android:id="@+id/android:list"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        swipe:swipeBackView="@+id/swipe_back_view"
-        swipe:swipeFrontView="@+id/swipe_front_view"
+        swipe:itemBackViewId="@+id/swipe_back_view"
+        swipe:itemFrontViewId="@+id/swipe_front_view"
         swipe:swipeMode="left"
         swipe:swipeOffsetType="traveled"
         swipe:swipeOffsetLeft="0dp"
         swipe:swipeOffsetRight="@dimen/item_height_3"
-        swipe:swipeCloseAllItemsWhenMoveList="true"
-        swipe:swipeMultipleSelectEnabled="false" />
+        swipe:closeAllItemsOnScroll="true"
+        swipe:multipleSelectEnabled="false" />
 
 </RelativeLayout>
