I'm lost and crying but it kinda works, I've tried so many things that I don't know what I did change in the end. This freaking list is getting on my nerves now... let's get more coffee.

--- a/res/layout/activity_swipe.xml
+++ b/res/layout/activity_swipe.xml
@@ -12,8 +12,9 @@
         swipe:itemBackViewId="@+id/swipe_back_view"
         swipe:itemFrontViewId="@+id/swipe_front_view"
         swipe:swipeMode="left"
+        swipe:swipeActionLeft="reveal"
         swipe:swipeOffsetType="traveled"
-        swipe:swipeOffsetLeft="0dp"
+        swipe:swipeOffsetLeft="150dp"
         swipe:swipeOffsetRight="@dimen/item_height_3"
         swipe:closeAllItemsOnScroll="true"
         swipe:multipleSelectEnabled="false" />
