--- a/res/layout/swipe_item_view.xml
+++ b/res/layout/swipe_item_view.xml
@@ -53,8 +53,7 @@
             android:id="@+id/item_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="STUB" />
+            android:layout_gravity="center" />
     </LinearLayout>
 
 </FrameLayout>
